--- a/index.html
+++ b/index.html
@@ -1,7 +1,59 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lavanda Daria Service</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
+            color: #333;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+        }
+        .container {
+            text-align: center;
+            max-width: 600px;
+            padding: 20px;
+            border: 1px solid #ddd;
+            background-color: #fff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+        }
+        h1 {
+            font-size: 1.8em;
+            margin: 0 0 10px;
+            color: #4a90e2;
+        }
+        p {
+            font-size: 1.1em;
+            line-height: 1.6;
+            color: #666;
+        }
+        .email-link {
+            display: inline-block;
+            margin-top: 15px;
+            padding: 10px 20px;
+            background-color: #4a90e2;
+            color: #fff;
+            text-decoration: none;
+            font-weight: bold;
+            border-radius: 4px;
+        }
+        .email-link:hover {
+            background-color: #357abd;
+        }
+    </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <div class="container">
+        <h1>Looking for the Next Tenant?</h1>
+        <p>If you are an owner looking for the next tenant for your laundromat, or a distributor with information about a recently available space, we'd love to hear from you.</p>
+        <a href="mailto:management@lavanadariaservice.com" class="email-link">Email Us</a>
+    </div>
 </body>
 </html>
