--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>Looking for the Next Tenant?</h1>
-        <p>If you are an owner looking for the next tenant for your laundromat, or a distributor with information about a recently available space, we'd love to hear from you.</p>
-        <a href="mailto:management@lavanadariaservice.com" class="email-link">Email Us</a>
+        <h1>Procurando o Próximo Inquilino?</h1>
+        <p>Se você é um proprietário em busca do próximo inquilino para sua lavanderia, ou um distribuidor com informações sobre um espaço recém-disponível, adoraríamos ouvir de você.</p>
+        <a href="mailto:management@lavanadariaservice.com" class="email-link">Envie-nos um Email</a>
     </div>
 </body>
 </html>
