--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
+            background-color: #f9fafc;
             color: #333;
             display: flex;
             align-items: center;
@@ -19,33 +19,38 @@
             text-align: center;
             max-width: 600px;
             padding: 20px;
-            border: 1px solid #ddd;
             background-color: #fff;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         }
         h1 {
-            font-size: 1.8em;
-            margin: 0 0 10px;
+            font-size: 2em;
+            margin-bottom: 10px;
             color: #4a90e2;
         }
         p {
             font-size: 1.1em;
             line-height: 1.6;
-            color: #666;
+            color: #555;
         }
         .email-link {
             display: inline-block;
             margin-top: 15px;
-            padding: 10px 20px;
+            padding: 12px 25px;
             background-color: #4a90e2;
             color: #fff;
             text-decoration: none;
             font-weight: bold;
-            border-radius: 4px;
+            border-radius: 5px;
+            transition: background-color 0.3s;
         }
         .email-link:hover {
             background-color: #357abd;
+        }
+        .email-display {
+            font-size: 1em;
+            margin-top: 15px;
+            color: #4a90e2;
         }
     </style>
 </head>
@@ -54,6 +59,7 @@
         <h1>Procurando o Próximo Inquilino?</h1>
         <p>Se você é um proprietário em busca do próximo inquilino para sua lavanderia, ou um distribuidor com informações sobre um espaço recém-disponível, adoraríamos ouvir de você.</p>
         <a href="mailto:management@lavanadariaservice.com" class="email-link">Envie-nos um Email</a>
+        <p class="email-display">management@lavanadariaservice.com</p>
     </div>
 </body>
 </html>
