--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
     <div class="container">
         <h1>Procurando o Próximo Inquilino?</h1>
         <p>Se você é um proprietário em busca do próximo inquilino para sua lavanderia, ou um distribuidor com informações sobre um espaço recém-disponível, adoraríamos ouvir de você.</p>
-        <a href="mailto:management@lavanadariaservice.com" class="email-link">Envie-nos um Email</a>
-        <p class="email-display">management@lavanadariaservice.com</p>
+        <a href="mailto:manager@lavanadariaservice.com" class="email-link">Envie-nos um Email</a>
+        <p class="email-display">manager@lavanadariaservice.com</p>
     </div>
 </body>
 </html>
