--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         <p>Se você é um proprietário em busca do próximo inquilino para sua lavanderia, ou um distribuidor com informações sobre um espaço recém-disponível, adoraríamos ouvir de você.</p>
         <a href="mailto:manager@lavanadariaservice.com" class="email-link">Envie-nos um Email</a>
         <p class="email-display">manager@lavanadariaservice.com</p>
+        <p> Estamos em busca de assinar um contrato de arrendamento de 15 anos para um espaço de lavanderia já construído no norte de Portugal. </p>
     </div>
 </body>
 </html>
